# CmakeTemplates

./: .gitignore
ConsolWithDll/: CMakeLists.txt
ConsolWithDll/source/lib/: CMakeLists.txt  dll.cpp  dll.h
ConsolWithDll/source/run_dll/: CMakeLists.txt  run_dll.cpp
ConsolWithStaticOpenCV/: CMakeLists.txt  main.cpp
